<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/movie_backdrop_description" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_movie_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:layout_alignBottom="@id/iv_backdrop_image"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/tv_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/detail_release_date" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_release_date_label"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:text="@string/example_release_date"/>

            <TextView
                android:id="@+id/tv_vote_average_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_release_date_label"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/detail_average_vote" />

            <RatingBar
                android:id="@+id/rb_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:scaleX="1.6"
                android:scaleY="1.6"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                android:layout_marginEnd="60dp"
                android:isIndicator="false"
                android:stepSize="0.5"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv_release_date"
                android:layout_toEndOf="@id/tv_vote_average_label"/>

            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_release_date"
                android:layout_toEndOf="@id/rb_vote_average"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:text="@string/example_vote_average"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_vote_average_label"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/detail_overview"/>

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_overview_label"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:lines="15"
                android:maxLines="15"
                android:text="@string/example_overview"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>