<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cv_review_margin"
    android:padding="@dimen/cv_review_padding"
    card_view:cardCornerRadius="@dimen/cv_review_corner_radius"
    card_view:cardElevation="@dimen/cv_review_elevation">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_review_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/review_author_text_size"
            android:layout_marginTop="@dimen/tv_review_author_margin_long"
            android:layout_marginStart="@dimen/tv_review_author_margin_long"
            android:layout_marginEnd="@dimen/tv_review_author_margin_long"
            android:layout_marginBottom="@dimen/tv_review_author_margin_short"
            android:text="@string/example_review_author"/>

        <TextView
            android:id="@+id/tv_review_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/review_content_text_size"
            android:layout_marginTop="@dimen/tv_review_author_margin_short"
            android:layout_marginStart="@dimen/tv_review_author_margin_long"
            android:layout_marginEnd="@dimen/tv_review_author_margin_long"
            android:layout_marginBottom="@dimen/tv_review_author_margin_short"
            android:text="@string/example_review_content"
            android:maxLines="5"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tv_review_read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tv_review_read_more_margin_long"
            android:layout_marginEnd="@dimen/tv_review_read_more_margin_long"
            android:layout_marginBottom="@dimen/tv_review_read_more_margin_long"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/tv_review_read_more_text_size"
            android:text="@string/detail_review_read_more"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</android.support.v7.widget.CardView>